@@ -84,7 +84,7 @@ public abstract class AbstractStructuredOutput implements StructuredOutput {
         if (nesting.isEmpty()) {
             return ElementType.UNKNOWN;
         }
-        return nesting.get(0).getType();
+        return nesting.getFirst().getType();
     }
 
     /**
@@ -96,16 +96,16 @@ public abstract class AbstractStructuredOutput implements StructuredOutput {
         if (nesting.isEmpty()) {
             return true;
         }
-        return nesting.get(0).isEmpty();
+        return nesting.getFirst().isEmpty();
     }
 
     @Override
     public StructuredOutput beginArray(String name) {
         startArray(name);
         if (!nesting.isEmpty()) {
-            nesting.get(0).setEmpty(false);
+            nesting.getFirst().setEmpty(false);
         }
-        nesting.add(0, new Element(ElementType.ARRAY, name));
+        nesting.addFirst(new Element(ElementType.ARRAY, name));
 
         return this;
     }
@@ -224,9 +224,9 @@ public abstract class AbstractStructuredOutput implements StructuredOutput {
     public StructuredOutput beginObject(String name, Attribute... attributes) {
         startObject(name, attributes);
         if (!nesting.isEmpty()) {
-            nesting.get(0).setEmpty(false);
+            nesting.getFirst().setEmpty(false);
         }
-        nesting.add(0, new Element(ElementType.OBJECT, name));
+        nesting.addFirst(new Element(ElementType.OBJECT, name));
         return this;
     }
 
@@ -295,8 +295,8 @@ public abstract class AbstractStructuredOutput implements StructuredOutput {
         if (nesting.isEmpty()) {
             throw new IllegalArgumentException("Invalid result structure. No array to close");
         }
-        Element e = nesting.get(0);
-        nesting.remove(0);
+        Element e = nesting.getFirst();
+        nesting.removeFirst();
         if (e.getType() != ElementType.ARRAY) {
             throw new IllegalArgumentException("Invalid result structure. No array to close");
         }
@@ -309,8 +309,8 @@ public abstract class AbstractStructuredOutput implements StructuredOutput {
         if (nesting.isEmpty()) {
             throw new IllegalArgumentException("Invalid result structure. No object to close");
         }
-        Element e = nesting.get(0);
-        nesting.remove(0);
+        Element e = nesting.getFirst();
+        nesting.removeFirst();
         if (e.getType() != ElementType.OBJECT) {
             throw new IllegalArgumentException("Invalid result structure. No object to close");
         }
@@ -336,7 +336,7 @@ public abstract class AbstractStructuredOutput implements StructuredOutput {
         } else {
             writeProperty(name, data);
         }
-        nesting.get(0).setEmpty(false);
+        nesting.getFirst().setEmpty(false);
         return this;
     }
 
@@ -373,7 +373,7 @@ public abstract class AbstractStructuredOutput implements StructuredOutput {
             writeAmountProperty(name, amount.toString(numberFormat).asString());
         }
 
-        nesting.get(0).setEmpty(false);
+        nesting.getFirst().setEmpty(false);
         return this;
     }
 
